--- a/Road-Fighter/Road-Fighter.vcxproj.filters
+++ b/Road-Fighter/Road-Fighter.vcxproj.filters
@@ -66,4 +66,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
 </Project>
